--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,14 @@
             <version>2.2.224</version>
         </dependency>
 
+        <!-- HikariCP Connection Pool -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+
+
         <!-- ★ Netty (базовый набор для сервера) -->
         <dependency>
             <groupId>io.netty</groupId>
